--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -52,6 +52,6 @@
 @import "./organisms/loyaltyprgrm-form";
 @import "./organisms/loyaltyprgrm-reward";
 @import "./organisms/loyaltyprgrm-otp";
-
+@import "./organisms/loyaltyprgrm-otp_new";
 
 // pages
