--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -16,6 +16,7 @@
 @import "./atoms/titles";
 @import "./atoms/titlesb";
 @import "./atoms/buttonsb";
+@import "./atoms/countrycode-select";
 
 
 // molecule
