--- a/assets/scss/organisms/_header.scss
+++ b/assets/scss/organisms/_header.scss
@@ -191,7 +191,7 @@
     }
 
     &__logo {
-      max-width: 65px;
+      max-width: 65px !important;
     }
 
     .navbar-light .navbar-toggler-icon {
