--- a/assets/scss/organisms/_signinup.scss
+++ b/assets/scss/organisms/_signinup.scss
@@ -158,6 +158,14 @@
          .wu-btns {
             padding-top: 25px;
          }
+
+         .wu-signinup__content__bg {
+            background-position: bottom;
+         }
+
+         .wu-signinup__content-wrap {
+            width: 95%;
+         }
       }
    }
 }
