--- a/assets/scss/organisms/_signinup.scss
+++ b/assets/scss/organisms/_signinup.scss
@@ -166,6 +166,10 @@
          .wu-signinup__content-wrap {
             width: 95%;
          }
+
+         .wu-signinup__wrap {
+            width: 100%;
+         }
       }
    }
 }
