--- a/assets/scss/organisms/_loyaltyprgrm.scss
+++ b/assets/scss/organisms/_loyaltyprgrm.scss
@@ -159,7 +159,7 @@
                 font-size: 16px;
                 font-weight: 600;
                 transition: 0.3s ease-in-out;
-                height: 44px;
+                padding: 8px 12px;
                 border: 2px solid #000;
 
                 &:hover {
@@ -180,7 +180,7 @@
                 border-radius: 20px;
                 border: none;
                 transition: 0.3s ease-in-out;
-                height: 44px;
+                padding: 8px 12px;
                 border: 2px solid #ffdd00;
 
                 &:hover {
