--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -54,5 +54,6 @@
 @import "./organisms/loyaltyprgrm-reward";
 @import "./organisms/loyaltyprgrm-otp";
 @import "./organisms/loyaltyprgrm-otp_new";
+@import "./organisms/lp-detailspage";
 
 // pages
