--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -55,5 +55,6 @@
 @import "./organisms/loyaltyprgrm-otp";
 @import "./organisms/loyaltyprgrm-otp_new";
 @import "./organisms/lp-detailspage";
+@import "./organisms/lp-profile";
 
 // pages
