--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -56,5 +56,6 @@
 @import "./organisms/loyaltyprgrm-otp_new";
 @import "./organisms/lp-detailspage";
 @import "./organisms/lp-profile";
+@import "./organisms/lp-terms&conditions";
 
 // pages
