--- a/assets/scss/organisms/_lp-detailspage.scss
+++ b/assets/scss/organisms/_lp-detailspage.scss
@@ -3,7 +3,7 @@
     background-color: #ffdd00;
 
     &__bg {
-        position: fixed;
+        position: absolute;
         top: 0;
         left: 0;
         width: 100%;
