--- a/assets/scss/organisms/_lp-profile.scss
+++ b/assets/scss/organisms/_lp-profile.scss
@@ -4,6 +4,10 @@
         padding-bottom: 15px;
     }
 
+    .wu-detailspg__bg {
+        height: 100%;
+    }
+
     &__cntryslctn {
         padding: 30px 0px;
 
@@ -47,10 +51,41 @@
         }
     }
 
+    &__cntrysec {
+        .wu-title {
+            padding-bottom: 15px;
+        }
+
+        .row {
+            padding: 20px 0px;
+
+            .col-md-10 {
+                padding: 0;
+            }
+        }
+
+        .checkboxlistformat {
+            input {
+                background-color: #fff;
+            }
+        }
+    }
+
+    &__checkbxwrap {
+        padding-top: 15px;
+    }
+
+    &__subtitle {
+        font-size: 20px;
+        color: #000;
+        line-height: 22px;
+    }
+
     &__cntrynme {
         font-size: 16px;
         color: #000;
         line-height: 20px;
+        padding-left: 6px;
     }
 
     &__unsubscribe {
@@ -66,6 +101,33 @@
             width: 15px;
             height: 15px;
             background-color: #fff;
+        }
+
+        label {
+            padding-left: 8px;
+            color: #000;
+            font-size: 16px;
+            line-height: 20px;
+        }
+    }
+}
+
+@include tablet-pro {
+    .wu-profile {
+        &__cntrysec {
+            .col-md-12 {
+                padding: 0;
+            }
+        }
+    }
+}
+
+@include tablet {
+    .wu-profile {
+        &__cntrysec {
+            .col-md-12 {
+                padding: 0;
+            }
         }
     }
 }
@@ -104,6 +166,10 @@
 
         &__cntryflg {
             width: 15%;
+        }
+
+        &__cntrysec {
+            padding: 0px 20px;
         }
     }
 }
