--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -57,5 +57,6 @@
 @import "./organisms/lp-detailspage";
 @import "./organisms/lp-profile";
 @import "./organisms/lp-terms&conditions";
+@import "./organisms/lp-policy";
 
 // pages
