--- a/assets/scss/organisms/_lp-terms&conditions.scss
+++ b/assets/scss/organisms/_lp-terms&conditions.scss
@@ -22,6 +22,11 @@
             color: #000;
             font-size: 16px;
             line-height: 20px;
+            text-decoration: underline;
+
+            &:hover {
+                text-decoration: unset;
+            }
         }
     }
 
