--- a/assets/scss/organisms/_lp-profile.scss
+++ b/assets/scss/organisms/_lp-profile.scss
@@ -65,9 +65,10 @@
         }
 
         .checkboxlistformat {
-            input {
-                background-color: #fff;
-            }
+
+            input[type=checkbox]:not(:checked){
+                        background-color: #f0f0f0;  /* Example: Light background for unchecked */
+                    }
         }
     }
 
