--- a/assets/scss/organisms/_lp-profile.scss
+++ b/assets/scss/organisms/_lp-profile.scss
@@ -54,6 +54,7 @@
     &__cntrysec {
         .wu-title {
             padding-bottom: 15px;
+            font-size: 30px;
         }
 
         .row {
