--- a/assets/scss/organisms/_loyaltyprgrm-form.scss
+++ b/assets/scss/organisms/_loyaltyprgrm-form.scss
@@ -77,11 +77,11 @@
         font-size: 16px;
         font-weight: 600;
         padding: 10px 40px;
-        height: 44px;
         border-radius: 20px;
         border: 2px solid #1C334E;
         transition: 0.3s ease-in-out;
         box-shadow: 0 0 5px rgba(28, 51, 78, 0.5);
+        text-align: center;
 
         &:hover {
             color: #0a0005;
