updated the modal width

--- a/assets/scss/organisms/_loyaltyprgrm.scss
+++ b/assets/scss/organisms/_loyaltyprgrm.scss
@@ -128,12 +128,13 @@
             color: #000;
             font-weight: 700;
             text-align: center;
-            padding: 20px 0px 4px 0px;
+            padding: 20px 30px 4px 30px;
         }
 
         .modal-body {
             display: flex;
             justify-content: center;
+            padding: 15px 30px;
 
             p {
                 width: 80%;
