--- a/assets/scss/organisms/_loyaltyprgrm-form.scss
+++ b/assets/scss/organisms/_loyaltyprgrm-form.scss
@@ -22,6 +22,10 @@
         width: 50%;
     }
 
+    &__uppertxta {
+        padding-bottom: 10px;
+    }
+
     &__outer {
         background-color: #ffdd00;
         padding: 25px 0px;
