--- a/assets/scss/organisms/_loyaltyprgrm.scss
+++ b/assets/scss/organisms/_loyaltyprgrm.scss
@@ -24,7 +24,7 @@
     }
 
     .wu-cmp-bckbtntitle {
-        padding: 30px 0px;
+        padding: 30px 0px 15px 0px;
         justify-content: center;
 
         &__img {
@@ -68,6 +68,14 @@
         border-radius: 4px;
         border: 1px solid #dadada;
         box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 2px;
+    }
+
+    &__subtitle {
+        font-size: 16px;
+        color: #000;
+        font-weight: 500;
+        text-align: center;
+        padding-bottom: 25px;
     }
 
 
