--- a/assets/scss/organisms/_loyaltyprgrm-otp_new.scss
+++ b/assets/scss/organisms/_loyaltyprgrm-otp_new.scss
@@ -64,6 +64,15 @@
     }
   }
 
+  &__labelout {
+    padding-bottom: 10px;
+  }
+
+  &__labelstr {
+    color: #ff0d00;
+    padding-left: 4px;
+  }
+
   &__input {
     padding: 8px;
     font-size: 14px;
